--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "cinema_react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.16.0",
+    "npm": "9.5.1"
+  },
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
