--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cinema_react",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": "18.16.0",
-    "npm": "9.5.1"
+    "node": ">=18.0.0",
+    "npm": ">=9.5.1"
   },
   "scripts": {
     "dev": "next dev -p 3005",
