--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">16.2.0",
     "npm": ">=9.5.1"
   },
   "scripts": {
