--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "read-excel-file": "^5.6.1"
+    "read-excel-file": "^5.6.1",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
