--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "node": ">16.2.0",
     "npm": ">=9.5.1"
   },
+  "browser": {
+    "crypto": false
+  },
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
