--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
+    "next": "^14.2.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "read-excel-file": "^5.6.1",
@@ -25,7 +25,6 @@
   "devDependencies": {
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
-    "koa": "^2.13.4",
     "sass": "^1.52.3"
   }
 }
