--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.2.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "read-excel-file": "^5.6.1",
     "xlsx-populate": "^1.21.0"
   },
